@@ -84,20 +84,22 @@ Many git-annex commands will stage changes for later `git commit` by you.
   it is safe to do so, typically because of the setting of annex.numcopies.
 
 * move [path ...]
+  
+  When used with the --from option, moves the content of annexed files
+  from the specified repository to the current one.
 
   When used with the --to option, moves the content of annexed files from
   the current repository to the specified one.
 
-  When used with the --from option, moves the content of annexed files
-  from the specified repository to the current one.
-
 * copy [path ...]
+
+  When used with the --from option, copies the content of annexed files
+  from the specified repository to the current one.
 
   When used with the --to option, copies the content of annexed files from
   the current repository to the specified one.
 
-  When used with the --from option, copies the content of annexed files
-  from the specified repository to the current one.
+  To avoid contacting the remote to check if it has every file, specify --fast
 
 * unlock [path ...]
 
@@ -137,10 +139,14 @@ Many git-annex commands will stage changes for later `git commit` by you.
 
   With parameters, only the specified files are checked.
 
+  To avoid expensive checksum calculations, specify --fast
+
 * unused
 
   Checks the annex for data that is not used by any files currently
   in the annex, and prints a numbered list of the data.
+
+  To only show unused temp files, specify --fast
 
 * dropunused [number ...]
 
@@ -286,8 +292,7 @@ Many git-annex commands will stage changes for later `git commit` by you.
 * --fast
 
   Enables less expensive, but also less thorough versions of some commands.
-  What is avoided depends on the command. A fast fsck avoids calculating
-  checksums; a fast unused only shows temp files and not other unused files.
+  What is avoided depends on the command.
 
 * --quiet
 
